include(pancam_transformerTaskLib)

ADD_LIBRARY(${PANCAM_TRANSFORMER_TASKLIB_NAME} SHARED 
    ${PANCAM_TRANSFORMER_TASKLIB_SOURCES})
add_dependencies(${PANCAM_TRANSFORMER_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${PANCAM_TRANSFORMER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${QT_LIBRARIES}
    ${PANCAM_TRANSFORMER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${PANCAM_TRANSFORMER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${PANCAM_TRANSFORMER_TASKLIB_INTERFACE_LIBRARIES}")
SET_TARGET_PROPERTIES(${PANCAM_TRANSFORMER_TASKLIB_NAME}
    PROPERTIES INTERFACE_LINK_LIBRARIES "${PANCAM_TRANSFORMER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${PANCAM_TRANSFORMER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${PANCAM_TRANSFORMER_TASKLIB_HEADERS}
    DESTINATION include/orocos/pancam_transformer)

